--- a/SitecoreLibrary/SitecoreLibrary.csproj
+++ b/SitecoreLibrary/SitecoreLibrary.csproj
@@ -139,26 +139,15 @@
     <Content Include="scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
-    <Content Include="Views\Author\AddAuthor.cshtml" />
-    <Content Include="Views\Author\GetAllAuthorDetails.cshtml" />
-    <Content Include="Views\Book\GetAllBookDetails.cshtml" />
-    <Content Include="Views\Author\EditAuthorDetails.cshtml" />
-    <Content Include="Views\Book\EditBookDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\AuthorController.cs" />
-    <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Controllers\BookWithAuthorController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Author.cs" />
-    <Compile Include="Models\Book.cs" />
     <Compile Include="Models\BooksWithAuthor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\AuthorRepository.cs" />
-    <Compile Include="Repository\BookRepository.cs" />
     <Compile Include="Repository\BookWithAuthorRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -169,9 +158,10 @@
     </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Book\AddBook.cshtml" />
     <Content Include="scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\BookWithAuthor\GetAllBookAuthorDetails.cshtml" />
+    <Content Include="Views\BookWithAuthor\AddBookWithAuthor.cshtml" />
+    <Content Include="Views\BookWithAuthor\EditBookWithAuthorDetails.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
