--- a/SitecoreLibrary/Web.config
+++ b/SitecoreLibrary/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="SitecoreConn" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=SitecoreLibraryDb;Integrated Security=True"
+    <add name="SitecoreConn" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=SitecoreBooksDb;Integrated Security=True"
        providerName="System.Data.SqlClient"/>
   </connectionStrings>  
   <appSettings>
