--- a/SitecoreLibrary/SitecoreLibrary.csproj
+++ b/SitecoreLibrary/SitecoreLibrary.csproj
@@ -179,6 +179,7 @@
     <Content Include="Views\BookWithAuthor\EditBookWithAuthorDetails.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
