--- a/SitecoreLibrary/Web.config
+++ b/SitecoreLibrary/Web.config
@@ -19,6 +19,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/_Login/Login" timeout="30" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
@@ -78,6 +81,9 @@
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+
+      <remove name="FormsAuthentication" />
+      <add name="FormsAuthentication" type="System.Web.Security.FormsAuthenticationModule" />
     </modules>
   </system.webServer>
   <entityFramework>
