--- a/SitecoreLibrary/Web.config
+++ b/SitecoreLibrary/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="SitecoreConn" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=SitecoreLibraryDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SitecoreConn" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=SitecoreBooksDb;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-SitecoreLibrary-20161111131020;Integrated Security=SSPI" />
   </connectionStrings>
   <appSettings>
