--- a/SitecoreLibrary/SitecoreLibrary.csproj
+++ b/SitecoreLibrary/SitecoreLibrary.csproj
@@ -164,14 +164,17 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BookHistoryController.cs" />
     <Compile Include="Controllers\BookWithAuthorController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BookHistory.cs" />
     <Compile Include="Models\BooksWithAuthor.cs" />
     <Compile Include="Models\LogOn.cs" />
     <Compile Include="Models\Register.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\BookHistoryRepository.cs" />
     <Compile Include="Repository\BookWithAuthorRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -190,6 +193,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_BooksWithAuthorsTable.cshtml" />
+    <Content Include="Views\BookHistory\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
