--- a/SitecoreLibrary/SitecoreLibrary.csproj
+++ b/SitecoreLibrary/SitecoreLibrary.csproj
@@ -169,10 +169,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\BookHistory.cs" />
-    <Compile Include="Models\Books.cs" />
-    <Compile Include="Models\LogOn.cs" />
-    <Compile Include="Models\Register.cs" />
+    <Compile Include="ViewModels\BookHistory.cs" />
+    <Compile Include="ViewModels\Books.cs" />
+    <Compile Include="ViewModels\LogOn.cs" />
+    <Compile Include="ViewModels\Register.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BookHistoryRepository.cs" />
     <Compile Include="Repository\BookRepository.cs" />
