--- a/SitecoreLibrary/SitecoreLibrary.csproj
+++ b/SitecoreLibrary/SitecoreLibrary.csproj
@@ -180,11 +180,14 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Contracts\IBookHistoryRepository.cs" />
-    <Compile Include="Contracts\IBookRepository.cs" />
+    <Compile Include="BAL\Services\BookService.cs" />
+    <Compile Include="BAL\Services\PostService.cs" />
+    <Compile Include="DAL\Contracts\IBookHistoryRepository.cs" />
+    <Compile Include="DAL\Contracts\IBookRepository.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BookHistoryController.cs" />
     <Compile Include="Controllers\BookController.cs" />
+    <Compile Include="DAL\Repository\GenericRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -194,8 +197,8 @@
     <Compile Include="ViewModels\LogOn.cs" />
     <Compile Include="ViewModels\Register.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\BookHistoryRepository.cs" />
-    <Compile Include="Repository\BookRepository.cs" />
+    <Compile Include="DAL\Repository\BookHistoryRepository.cs" />
+    <Compile Include="DAL\Repository\BookRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -223,6 +226,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="BAL\Contracts\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
